SERVER-22564 Move ReplicaSetMonitor to TaskExecutor thread