src/mongo/client/replica_set_monitor_manager.cpp
@@ -35,6 +35,12 @@
 #include "mongo/bson/bsonobjbuilder.h"
 #include "mongo/client/connection_string.h"
 #include "mongo/client/replica_set_monitor.h"
+#include "mongo/executor/network_interface_factory.h"
+#include "mongo/executor/network_interface_thread_pool.h"
+#include "mongo/executor/task_executor.h"
+#include "mongo/executor/task_executor_pool.h"
+#include "mongo/executor/thread_pool_task_executor.h"
+#include "mongo/stdx/memory.h"
 #include "mongo/stdx/mutex.h"
 #include "mongo/util/log.h"
 #include "mongo/util/map_util.h"
@@ -46,7 +52,13 @@ using std::set;
 using std::string;
 using std::vector;
 
-ReplicaSetMonitorManager::ReplicaSetMonitorManager() = default;
+using executor::NetworkInterface;
+using executor::NetworkInterfaceThreadPool;
+using executor::TaskExecutorPool;
+using executor::TaskExecutor;
+using executor::ThreadPoolTaskExecutor;
+
+ReplicaSetMonitorManager::ReplicaSetMonitorManager() {}
 
 ReplicaSetMonitorManager::~ReplicaSetMonitorManager() = default;
 
@@ -61,6 +73,16 @@ shared_ptr<ReplicaSetMonitor> ReplicaSetMonitorManager::getOrCreateMonitor(
     invariant(connStr.type() == ConnectionString::SET);
 
     stdx::lock_guard<stdx::mutex> lk(_mutex);
+    if (!_taskExecutor) {
+        // construct task executor
+        auto net = executor::makeNetworkInterface("ReplicaSetMonitor-TaskExecutor");
+        auto netPtr = net.get();
+        _taskExecutor = stdx::make_unique<ThreadPoolTaskExecutor>(
+            stdx::make_unique<NetworkInterfaceThreadPool>(netPtr), std::move(net));
+        LOG(1) << "Starting up task executor for monitoring replica sets in response to request to "
+                  "monitor set: " << connStr.toString();
+        _taskExecutor->startup();
+    }
 
     shared_ptr<ReplicaSetMonitor>& monitor = _monitors[connStr.getSetName()];
     if (!monitor) {
@@ -70,6 +92,7 @@ shared_ptr<ReplicaSetMonitor> ReplicaSetMonitorManager::getOrCreateMonitor(
         log() << "Starting new replica set monitor for " << connStr.toString();
 
         monitor = std::make_shared<ReplicaSetMonitor>(connStr.getSetName(), servers);
+        monitor->init();
     }
 
     return monitor;
@@ -98,9 +121,15 @@ void ReplicaSetMonitorManager::removeMonitor(StringData setName) {
 
 void ReplicaSetMonitorManager::removeAllMonitors() {
     stdx::lock_guard<stdx::mutex> lk(_mutex);
-
-    // Reset the StringMap, which will release all registered monitors
+    // Reset the _monitors map, which will release all registered monitors
     _monitors = ReplicaSetMonitorsMap();
+
+    if (_taskExecutor) {
+        LOG(1) << "Shutting down task executor used for monitoring replica sets";
+        _taskExecutor->shutdown();
+        _taskExecutor->join();
+        _taskExecutor.release();
+    }
 }
 
 void ReplicaSetMonitorManager::report(BSONObjBuilder* builder) {
@@ -117,6 +146,11 @@ void ReplicaSetMonitorManager::report(BSONObjBuilder* builder) {
         BSONObjBuilder monitorInfo(builder->subobjStart(setName));
         monitor->appendInfo(monitorInfo);
     }
+}
+
+TaskExecutor* ReplicaSetMonitorManager::getExecutor() {
+    invariant(_taskExecutor);
+    return _taskExecutor.get();
 }
 
 }  // namespace mongo
